Config stuff! Linux AMD64/AARCH64 support, + plans for Windows AARCH64 and Mac AMD64/AARCH64 support. Maybe future plasmovoice support.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 *.iws
 
 # Custom
-src/client/resources/native/libespeak-ng.dll
-src/client/resources/native/espeak-ng-data
+src/client/resources/native/espeak-ng-data/*
+src/client/resources/native/**/*.dll
+src/client/resources/native/**/*.so
 
 # IntelliJ
 out/
