--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,15 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
-    maven { url = 'https://maven.maxhenkel.de/repository/public' }
+    maven { url = "https://maven.maxhenkel.de/repository/public" }
+    maven {
+        url = "https://maven.isxander.dev/releases"
+        name = "Xander Maven"
+    }
+    maven {
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
+    }
 }
 
 dependencies {
@@ -54,8 +62,10 @@ dependencies {
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation "maven.modrinth:simple-voice-chat:fabric-1.21.9-2.6.4"
-    modRuntimeOnly "de.maxhenkel.voicechat:voicechat-api:2.6.0:fabric-stub"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
+    modImplementation "maven.modrinth:simple-voice-chat:${project.svc_version}"
+    modRuntimeOnly "de.maxhenkel.voicechat:voicechat-api:${project.svc_api_version}:fabric-stub"
 
     implementation(include("net.flamgop.espeak4j:espeak4j:1.0.7"))
 }
