--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.9
-loader_version=0.18.3
+minecraft_version=1.21.10
+loader_version=0.18.4
 # Mod Properties
 mod_version=1.0.0
 maven_group=net.flamgop
 archives_base_name=TTSMod
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.134.1+1.21.9
+fabric_version=0.138.4+1.21.10
+
+modmenu_version=16.0.0-rc.2
+yacl_version=3.8.1+1.21.10-fabric
+svc_version=fabric-1.21.10-2.6.4
+svc_api_version=2.6.0
